# llmproxy

./: .env  AGENTS.md  config.py  lint.cmd  lint.sh  main.py  pyproject.toml  serve.cmd
cmd/: chat_client.py
docs/: llama-cpp-backend-api.http  llama-cpp-backend-api.md
docs/manuals/: slots.jsonc
docs/proposals/: 利用llama-server的低级api接口-优化多会话的prompt缓存.md
openspec/changes/archive/2026-03-17-add-all-function-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-17-openai-proxy-service/: proposal.md
openspec/changes/archive/2026-03-21-toggle-chat-logging/: design.md  proposal.md  tasks.md
openspec/changes/openai-proxy-service/: design.md  tasks.md
openspec/changes/optimize-multisession-prompt-cache/: design.md  proposal.md  tasks.md
openspec/changes/trace-agent-sessions/: proposal.md  tasks.md
openspec/specs/automated-testing-suite/: spec.md
openspec/specs/chat-interaction-recorder/: spec.md
openspec/specs/config-driven-logging/: spec.md
openspec/specs/multisession-prompt-cache/: spec.md
openspec/specs/openai-proxy-core/: spec.md
scripts/: compare_prompts.py
src/: config.py  dependencies.py  llama_client.py  logger_setup.py  main.py  slot_manager.py  utils.py
src/routers/: chat.py
tests/: conftest.py  test_agent_tracking.py  test_catch_all.py  test_chat.py  test_config.py  test_interaction_logging.py  test_logger_setup.py  test_main.py  test_proxy_routing.py  test_session_extraction.py  test_slot_init.py  test_slot_manager.py  test_toggle_logging.py
tests/cli/: chat_client.py  mock_backend.py  streaming_chat_client.py
(+21 files in other folders)
